mongoDb.txt
test> db
test
test> use test
already on db test
test> use db
switched to db db
db> use test
switched to db test
test> show dbs
admin    40.00 KiB
config  108.00 KiB
local    72.00 KiB
test> use db
switched to db db
db> db.db.insert({"name":"shivani","age":22,"location":"Maharashtra"})
DeprecationWarning: Collection.insert() is deprecated. Use insertOne, insertMany, or bulkWrite.
{
  acknowledged: true,
  insertedIds: { '0': ObjectId("63ef7f66e25389d3f2a7d1f8") }
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  }
]
db> db.db.find().pretty()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  }
]
db> db.db.insert({"name":"anjali","age":23,"location":"Maharashtra"})
{
  acknowledged: true,
  insertedIds: { '0': ObjectId("63ef8125e25389d3f2a7d1f9") }
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.find({}, _id:0)
Uncaught:
SyntaxError: Unexpected token, expected "," (1:18)

> 1 | db.db.find({}, _id:0)
    |                   ^
  2 |

db> db.db.find({}, _id:0).pretty()
Uncaught:
SyntaxError: Unexpected token, expected "," (1:18)

> 1 | db.db.find({}, _id:0).pretty()
    |                   ^
  2 |

db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.find().pretty()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.find({name:"shivani"})
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  }
]
db> db.db.find({age:{$lt:23}})
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  }
]
db> db.db.find({age:{$gt:22}})
[
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.find({age:{$gte:22}})
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.find({age:{$lte:22}})
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  }
]
db> db.db.find({age:{$lte:23}})
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 22,
    location: 'Maharashtra'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.update({age:22},{$set:{age:23}})
DeprecationWarning: Collection.update() is deprecated. Use updateOne, updateMany, or bulkWrite.
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 23,
    location: 'Maharashtra'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.update({age:22},{$set:{isMarried:false}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 0,
  modifiedCount: 0,
  upsertedCount: 0
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 23,
    location: 'Maharashtra'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.update({age:23},{$set:{isMarried:false}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 23,
    location: 'Maharashtra',
    isMarried: false
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.update({age:23},{$set:{isMarried:false}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 0,
  upsertedCount: 0
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 23,
    location: 'Maharashtra',
    isMarried: false
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra'
  }
]
db> db.db.update({age:23},{$set:{isMarried:false}})
db> db.db.update({_id:ObjectId("63ef8125e25389d3f2a7d1f9")},{$set:{isMarried:false}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 23,
    location: 'Maharashtra',
    isMarried: false
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'anjali',
    age: 23,
    location: 'Maharashtra',
    isMarried: false
  }
]
db> db.db.remove({_id:ObjectId("63ef8125e25389d3f2a7d1f9")})
DeprecationWarning: Collection.remove() is deprecated. Use deleteOne, deleteMany, findOneAndDelete, or bulkWrite.
{ acknowledged: true, deletedCount: 1 }
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'shivani',
    age: 23,
    location: 'Maharashtra',
    isMarried: false
  }
]
db> db.db.remove({})
{ acknowledged: true, deletedCount: 1 }
db> db.db.find()
